# impact-rpa

./: .gitignore  AGENTS.md  BACKEND_GUIDE.md  COMPLETION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ImpactRPA.spec  NETWORK_FLOW_WITH_GO_MITMPROXY.md  README.md  UPDATE_FEATURE.md  app.py  check_browser_connection.py  exception_handler.py  gui.py  integration_test.py  legacy_main.py  main.py  main_updated.py  network_trigger_guide.md  notification_service.py  partner_groups_api_experience.md  partner_metrics.json  partner_metrics_pipeline_plan.md  pyproject.toml  pyqt_ui.py  test_creator_search_send.py  test_date_picker_cache.py  test_selector_cache.py  test_update_functionality.py  update_manager.py  vision_rpa.py
config/: http_flow.example.json  settings.json  template.txt  templates.json
core/: __init__.py  config_manager.py  config_store.py  identity_service.py  remote_sync_service.py  settings_service.py  template_manager.py
domain/: __init__.py  date_picker.py  partner_groups_api.py  proposal_modal_service.py  proposal_sender.py  selectors.py  wait_utils.py
infra/: __init__.py  browser_manager.py
scripts/: __init__.py  batch_create_partner_groups.py  create_partner_groups_api.py  create_partner_groups_ui.py  fetch_element_value.py  get_sibling_elements.py  send_proposals_via_http.py  test_impact_cross_month_date.py  test_notification.py  test_partner_groups_api.py  test_partner_groups_api_live.py  test_partner_groups_comparison.py  test_template_term_logic.py
ui/: __init__.py  menu_ui.py
