[project]
name = "impact-rpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "drissionpage>=4.1.1.2",
    "loguru>=0.7.3",
    "pyperclip>=1.11.0",
    "pyside6>=6.10.1",
    "questionary>=2.1.1",
    "rich>=14.2.0",
]
