[project]
name = "impact-rpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "drissionpage>=4.1.1.2",
    "loguru>=0.7.3",
    "plyer>=2.1.0",
    "pydantic>=2.7.0",
    "pyperclip>=1.11.0",
    "questionary>=2.1.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
vision = [
    "openai>=1.0.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
]
